feat(dashboard): calculate holding total value
