# models/account.go
@@ -26,8 +26,9 @@ type AccountUpdateRequest struct {
 }
 
 type AccountResponse struct {
-	ID       string  `json:"id"`
-	Name     string  `json:"name"`
-	Currency string  `json:"currency"`
-	Balance  float64 `json:"balance"`
+	ID                       string  `json:"id"`
+	Name                     string  `json:"name"`
+	Currency                 string  `json:"currency"`
+	Balance                  float64 `json:"balance"`
+	BalanceInDefaultCurrency float64 `json:"balanceInDefaultCurrency"`
 }
